--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:types": "tsc --jsx react -noEmit -p ."
   },
   "dependencies": {
+    "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zustand": "^5.0.0-rc.2"
